--- a/sp/lab3/Untitled.ipynb
+++ b/sp/lab3/Untitled.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0af262",
+   "id": "bd5b78db",
    "metadata": {},
    "source": [
     "We have $f(x) = e^{i2\\pi F_0 x}$ and a sampling step $a=$$1\\over F_e$ where $F_e = 32$.  \n",
@@ -131,11 +131,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d97fc4",
+   "id": "6d121a26",
    "metadata": {},
    "source": [
     "## Exercice 2\n",
-    "\n"
+    "\n",
+    "### 1. Expression of $g_n$\n",
+    "The convolution product on distributions gives us \n",
+    "$$\n",
+    "<d\\star f, \\phi> = {1\\over 4}\\sum\\limits_{k=0}^3\\sum\\limits_{n\\in \\mathbb{Z}} f_n \\phi((k+n)a)\n",
+    "$$\n",
+    "Which implies\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    d\\star f &= {1\\over 4}\\sum\\limits_{k=0}^3\\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{(k+n)a}\\\\\n",
+    "    &= {1\\over 4} ( \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{na} + \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{(1+n)a} + \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{(2+n)a} + \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{(3+n)a}\\\\\n",
+    "    &= \\sum\\limits_{n \\in \\mathbb{Z}} \\underbrace{{1\\over 4} (f_n + f_{n+1} + f_{n+2} + f_{n+3})}_{g_n} \\delta_n\n",
+    "\\end{align}\n",
+    "$$\n",
+    "By the N-periodicity of $f_n$, the N-periodicity of $g_n$ is immediate. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e45e144d",
+   "metadata": {},
+   "source": [
+    "### 2. Computation of $g$ using DFT and IDFT\n",
+    "\n",
+    "The fourier transform of a convolution is the product of the fourier transforms of the operands. Thus to obtain $g$ using DFT we calculate the DFT of $d$ and $f$ and apply the inverse transform on the product."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9c4e70d",
+   "metadata": {},
+   "source": [
+    "#### Coresponding program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48de3a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convolution(a, b)\n",
+    "    \"\"\"\n",
+    "    Applies the convolution product a*b and returns it by first calculating the DFT of a and b,\n",
+    "    multiplying them together and returning the inverse DFT.\n",
+    "    \"\"\"\n",
+    "    a_hat = np.fft.fft(a)\n",
+    "    b_hat = np.fft.fft(b)\n",
+    "    c = np.fft.ifft(a_hat * b_hat)\n",
+    "\n",
+    "    return c\n"
    ]
   }
  ],
