Prettify everything, add introductions

--- a/sp/lab3/Untitled.ipynb
+++ b/sp/lab3/Untitled.ipynb
@@ -10,6 +10,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a3c020a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# necessary options and imports\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "19bba3c9",
    "metadata": {},
@@ -76,10 +89,7 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "# Comparison between approximated and analytical solutions\n",
     "Fe = 32\n",
     "N = 16\n",
     "\n",
@@ -94,7 +104,7 @@
     "\n",
     "SNk = np.fft.fft(temp_signal)\n",
     "\n",
-    "# plots\n",
+    "## plots\n",
     "\n",
     "X = np.linspace(0, Fe, 200)\n",
     "\n",
@@ -112,6 +122,9 @@
     "temp_signal = f(np.arange(-N, N)/Fe, F0)\n",
     "\n",
     "SNk = np.fft.fft(temp_signal)\n",
+    "\n",
+    "## plots \n",
+    "\n",
     "plt.plot(np.arange(0, 2*N) / (2*N/Fe), np.abs(SNk), label=r\"$S_N(\\frac{k}{T})$\")\n",
     "plt.plot(X, np.abs(SNlambda(X, f0, Fe)), label=r\"$S_N(\\lambda)$\")\n",
     "plt.title(r\"Comparison of $S_N(\\lambda)$ and $S_N(\\frac{k}{T})$ when $f_0 = 0.2$\", fontsize=16)\n",
@@ -136,6 +149,9 @@
    "source": [
     "## Exercice 2\n",
     "\n",
+    "In this exercice we consider the discrete signals $f = \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{na}$ and $d = {1\\over 4} (\\delta_0 + \\delta_1 + \\delta_2 + \\delta_3)$.  \n",
+    "We study the convolution $g = d \\star f = \\sum\\limits_{n\\in \\mathbb{Z}} g_n \\delta_{na}$.\n",
+    "\n",
     "### 1. Expression of $g_n$\n",
     "The convolution product on distributions gives us \n",
     "$$\n",
@@ -149,7 +165,7 @@
     "    &= \\sum\\limits_{n \\in \\mathbb{Z}} \\underbrace{{1\\over 4} (f_n + f_{n+1} + f_{n+2} + f_{n+3})}_{g_n} \\delta_n\n",
     "\\end{align}\n",
     "$$\n",
-    "By the N-periodicity of $f_n$, the N-periodicity of $g_n$ is immediate. "
+    "So y the N-periodicity of $f_n$, the N-periodicity of $g_n$ is immediate. "
    ]
   },
   {
@@ -172,22 +188,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48de3a53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convolution(a, b)\n",
+    "# Definition of the function to calculate the convolution between two function\n",
+    "def convolution(a, b):\n",
     "    \"\"\"\n",
     "    Applies the convolution product a*b and returns it by first calculating the DFT of a and b,\n",
     "    multiplying them together and returning the inverse DFT.\n",
+    "    \n",
+    "    Arguments :\n",
+    "        a : ndarray, first operand of the convolution\n",
+    "        b : ndarray, second operand of the convolution\n",
     "    \"\"\"\n",
     "    a_hat = np.fft.fft(a)\n",
     "    b_hat = np.fft.fft(b)\n",
     "    c = np.fft.ifft(a_hat * b_hat)\n",
     "\n",
-    "    return c\n"
+    "    return c"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d5728ae",
+   "metadata": {},
+   "source": [
+    "### 3. Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2713a40",
+   "metadata": {},
+   "source": [
+    "We consider $f(x) = \\sin(2\\pi x)$ on the interval $[0,2[$ sampled at a 20 Hz frequency.\n",
+    "\n",
+    "The discrete signal obtained can thus be written $\\sum\\limits_{n=0}^{39} f(na)\\delta_{na}$ where $a =$ $1\\over 20$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2da31912",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
