finished 3.1 . progress on 3.2

--- a/sp/lab3/Lab3 SP.ipynb
+++ b/sp/lab3/Lab3 SP.ipynb
@@ -27,7 +27,7 @@
    "id": "19bba3c9",
    "metadata": {},
    "source": [
-    "## Exercice 1 "
+    "# Exercice 1 "
    ]
   },
   {
@@ -38,7 +38,7 @@
     "We have $f(x) = e^{i2\\pi F_0 x}$ and a sampling step $a=$$1\\over F_e$ where $F_e = 32$.  \n",
     "Given the expression of $f$ the fourier transform should give us a peak at $F_0$.\n",
     "\n",
-    "### 1. Reduction of $S_N(\\lambda)$\n",
+    "## 1. Reduction of $S_N(\\lambda)$\n",
     "\n",
     "$S_N(\\lambda)$ is a geometric sum from $-N$ to $N-1$. Doing the appropriate factorisation gives us\n",
     "\n",
@@ -157,12 +157,12 @@
    "id": "6d121a26",
    "metadata": {},
    "source": [
-    "## Exercice 2\n",
+    "# Exercice 2\n",
     "\n",
     "In this exercice we consider the discrete signals $f = \\sum\\limits_{n\\in \\mathbb{Z}} f_n \\delta_{na}$ and $d = {1\\over 4} (\\delta_0 + \\delta_1 + \\delta_2 + \\delta_3)$.  \n",
     "We study the convolution $g = d \\star f = \\sum\\limits_{n\\in \\mathbb{Z}} g_n \\delta_{na}$.\n",
     "\n",
-    "### 1. Expression of $g_n$\n",
+    "## 1. Expression of $g_n$\n",
     "The convolution product on distributions gives us \n",
     "$$\n",
     "<d\\star f, \\phi> = {1\\over 4}\\sum\\limits_{k=0}^3\\sum\\limits_{n\\in \\mathbb{Z}} f_n \\phi((k+n)a)\n",
@@ -183,7 +183,7 @@
    "id": "e45e144d",
    "metadata": {},
    "source": [
-    "### 2. Computation of $g$ using DFT and IDFT\n",
+    "## 2. Computation of $g$ using DFT and IDFT\n",
     "\n",
     "The fourier transform of a convolution is the product of the fourier transforms of the operands i.e. $\\widehat{d \\star f} = \\hat{d} \\hat{f}$.  \n",
     "Thus to obtain $g$ using DFT we calculate the DFT of $d$ and $f$ separately then apply the inverse transform on the product $\\hat{d} \\hat{f}$."
@@ -194,7 +194,7 @@
    "id": "f9c4e70d",
    "metadata": {},
    "source": [
-    "#### Coresponding program"
+    "### Coresponding program"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "id": "02aa29fe",
    "metadata": {},
    "source": [
-    "### 3. Application"
+    "## 3. Application"
    ]
   },
   {
@@ -244,7 +244,9 @@
    "cell_type": "code",
    "execution_count": 111,
    "id": "7ba231a4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -302,7 +304,7 @@
    "id": "6880f9ff",
    "metadata": {},
    "source": [
-    "### 4. Deconvolution \n",
+    "## 4. Deconvolution \n",
     "Using the same property we used in **2.2** and supposing $\\hat{d} \\ne 0$ everywhere, we have\n",
     "$$\n",
     "\\hat{f} = {\\hat{g} \\over \\hat{d}}\n",
@@ -317,7 +319,7 @@
    "id": "0ea9a230",
    "metadata": {},
    "source": [
-    "#### deconvolution code"
+    "### deconvolution code"
    ]
   },
   {
@@ -355,9 +357,9 @@
    "id": "874decc8",
    "metadata": {},
    "source": [
-    "### 5. Inverse filter\n",
+    "## 5. Inverse filter\n",
     "\n",
-    "#### Inverse filter implementation"
+    "### Inverse filter implementation"
    ]
   },
   {
@@ -396,7 +398,7 @@
    "id": "5bae7791",
    "metadata": {},
    "source": [
-    "#### Illustration"
+    "### Illustration"
    ]
   },
   {
@@ -441,7 +443,7 @@
    "id": "2f8b70cb",
    "metadata": {},
    "source": [
-    "#### Recovery of f using the inverse filter"
+    "### Recovery of f using the inverse filter"
    ]
   },
   {
@@ -449,7 +451,7 @@
    "execution_count": 153,
    "id": "539d63ae",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -508,9 +510,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "968399c0",
+   "metadata": {},
+   "source": [
+    "# Exercice 3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ca0ddd",
+   "metadata": {},
+   "source": [
+    "We consider the filter $(h_n)$ and its transfer function, $H(\\lambda) = \\sum\\limits_{n\\in \\mathbb{Z}} h_n e^{-i2\\pi n \\lambda}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a82d0e",
+   "metadata": {},
+   "source": [
+    "## 1 Calculation of H"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "250cb594",
+   "metadata": {},
+   "source": [
+    "$H$ is a 1-periodic function so it can be expressed via its fourier serie : $H(\\lambda) = \\sum\\limits_{n\\in \\mathbb{Z}} c_n e^{i2\\pi n\\lambda}$ where the $c_n$ are the fourier coefficiants of H.  \n",
+    "It comes then that $c_n = h_{-n}$. We have\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    c_n &= \\int_{-{1\\over 2}}^{1\\over 2} H(x) e^{-i2\\pi x n}\\ dx\\\\\n",
+    "        &= \\int_{-{1\\over 4}}^{1\\over 4} e^{-i2\\pi x n}\\ dx\\\\\n",
+    "        &= {1 \\over -2\\pi ni}(e^{-{i2\\pi n \\over 4}} - e^{i2\\pi n \\over 4})\\\\\n",
+    "        &= {\\sin({\\pi \\over 2}n) \\over \\pi n} \\\\\n",
+    "        &= 2\\ \\text{sinc}({\\pi \\over 2} n)\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "So $h_n = 2\\ \\text{sinc}(-{\\pi \\over 2} n) = -2\\ \\text{sinc}({\\pi \\over 2} n)$  \n",
+    "\n",
+    "We now truncate the filter To obtain N finite values. Thus two cases unearth : N odd or N even."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3e1c932",
+   "metadata": {},
+   "source": [
+    "## 2. $N$ odd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e5c7db",
+   "metadata": {},
+   "source": [
+    "In this case we choose $N = 15$. We have $H(\\lambda) = \\sum\\limits_{n=-7}^{7} h_n e^{-i2\\pi n \\lambda}$.\n",
+    "\n",
+    "However, this filter is not causal as its support is not in $[0, +\\infty[. A causal version would be $\\sum\\limits_0^{14} h_{n-7} \\delta_n$ which corresponds to a shift of magnitude 7 in frequency."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122f2e6d",
+   "id": "12a9711a",
    "metadata": {},
    "outputs": [],
    "source": []
